--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Used to discover other devices for database synchronization.</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dragonfakt._tcp</string>
+	</array>
 </dict>
 </plist>
