--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   table_calendar: ^3.0.9
   home_widget: ^0.9.0
+  bonsoir: ^6.0.1
+  shelf: ^1.4.2
+  shelf_router: ^1.1.4
+  device_info_plus: ^12.3.0
+  connectivity_plus: ^7.0.0
+  http: ^1.6.0
+  archive: ^4.0.9
 
 dev_dependencies:
   flutter_test:
