--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   connectivity_plus: ^7.0.0
   http: ^1.6.0
   archive: ^4.0.9
+  share_plus: ^12.0.1
+  smooth_page_indicator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
